# scrapxd

./: .gitignore  README.md  pyproject.toml  requirements.txt  test.py
.github/workflows/: ci.yml  publish.yml
examples/: 1_quickstart_guide.ipynb  2_deep_dive_analysis.ipynb  3_comparing_profiles.ipynb  4_advanced_guide.ipynb  search_results.xlsx
scrapxd/: config.py  fetcher.py  utils.py
scrapxd/models/: __init__.py  entry.py  entry_list.py  film.py  user.py  user_list.py
scrapxd/parser/: film.py  lists.py  user.py
src/scrapxd/: fetcher.py
src/scrapxd/models/: film_search.py  user.py
tests/: test_fetcher.py  test_film.py  test_user.py
tests/fixtures/html/film/: MulhollandDrive_2001_DavidLynch.htm  breathless.htm
tests/fixtures/html/search/: crime_drama_notsciencefiction_1960s.htm
tests/fixtures/html/user/hyumiguel/: diary_page_1.htm  films_page_1.htm  followers_page_1.htm  following_page_1.htm  list_specific_page_1.htm  list_specific_page_2.htm  lists_index_page_1.htm  profile.htm  reviews_page_1.htm  watchlist_page_1.htm
