[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scrapxd"
version = "0.1.0"
authors = [
  { name="Cauã Santos", email="cauafsantosdev@gmail.com" },
]
description = "A Letterboxd web scraper library."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
]

dependencies = [
    "requests",
    "beautifulsoup4",
    "lxml",
    "fake-useragent",
    "pydantic"
]

[project.optional-dependencies]
test = [
    "pytest",
]